--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon app.js",
+    "start": "nodemon app.js",
     "dev:client": "cd client && npm run dev",
     "start:both": "concurrently \"npm run start\" \"npm run dev:client\""
   },
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^10.2.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4"
   }
