--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@material-tailwind/react": "^2.0.5",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "firebase": "^10.3.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
