--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "emoji-mart": "^5.5.2",
     "express": "^4.18.2",
     "firebase": "^10.2.0",
     "firebase-admin": "^11.10.1",
