--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,15 @@
     "@vitejs/plugin-react": "^4.0.4",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
+    "emoji-mart": "^5.5.2",
     "firebase": "^10.3.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-drag-reorder": "^1.2.0",
     "react-router-dom": "^6.14.1",
     "react-toastify": "^9.1.3",
     "vite": "^4.4.9"
